--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,8 @@ jobs:
           static_site_generator: next
       - name: Install dependencies
         run: npm ci
+      - name: Install MDX plugin
+        run: npm install @next/mdx
       - name: Build with Next.js
         run: npm run build
       - name: Upload artifact
